[package]
name = "mnist-classifier"
version = "0.1.0"
authors = ["Neil Kaushikkar <neil.kaushikkar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
ndarray = "0.15.2"
approx = "0.4.0"
csv = "1.1"
